--- a/project-files/monica-lib/monica-lib.vcxproj
+++ b/project-files/monica-lib/monica-lib.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="..\..\src\core\crop.h" />
     <ClInclude Include="..\..\src\core\monica-parameters.h" />
     <ClInclude Include="..\..\src\core\monica-model.h" />
+    <ClInclude Include="..\..\src\core\O3-impact.h" />
     <ClInclude Include="..\..\src\core\photosynthesis-FvCB.h" />
     <ClInclude Include="..\..\src\core\soilcolumn.h" />
     <ClInclude Include="..\..\src\core\soilmoisture.h" />
@@ -220,6 +221,7 @@
     <ClCompile Include="..\..\..\util\tools\read-ini.cpp" />
     <ClCompile Include="..\..\src\core\crop-growth.cpp" />
     <ClCompile Include="..\..\src\core\crop.cpp" />
+    <ClCompile Include="..\..\src\core\O3-impact.cpp" />
     <ClCompile Include="..\..\src\core\photosynthesis-FvCB.cpp" />
     <ClCompile Include="..\..\src\core\voc-guenther.cpp" />
     <ClCompile Include="..\..\src\core\voc-jjv.cpp" />
