--- a/project-files/monica-lib/monica-lib.vcxproj.filters
+++ b/project-files/monica-lib/monica-lib.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClInclude Include="..\..\src\core\photosynthesis-FvCB.h">
       <Filter>Headerdateien\monica\core</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\core\O3-impact.h">
+      <Filter>Headerdateien\monica\core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\util\db\sqlite3.c">
@@ -255,6 +258,9 @@
       <Filter>Quelldateien\monica\io</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\core\photosynthesis-FvCB.cpp">
+      <Filter>Quelldateien\monica\core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\core\O3-impact.cpp">
       <Filter>Quelldateien\monica\core</Filter>
     </ClCompile>
   </ItemGroup>
