--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -7,10 +7,10 @@ logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
 pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-nodaemon=false               ; (start in foreground if true;default false)
+nodaemon=true                ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
 minprocs=200                 ; (min. avail process descriptors;default 200)
-user=root             ;
+;user=root             ;
  
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
@@ -30,24 +30,23 @@ serverurl=unix:///dev/shm/supervisor.sock ; use a unix:// URL  for a unix socket
 [include]
 files = /etc/supervisor/conf.d/*.conf
  
- 
-[program:monica-control]
-command=/run/monica/monica-zmq-control
-numprocs=1
-autostart=true
-autorestart=true
- 
 [program:monica-proxy-in]
 command=/run/monica/monica-zmq-proxy -p -f 7788 -b 7777
 numprocs=1
 autostart=true
 autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:monica-proxy-out]
 command=/run/monica/monica-zmq-proxy -p -f 6666 -b 6677 
 numprocs=1
 autostart=true
 autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:monica-worker]
 process_name = %(program_name)s_%(process_num)02d
@@ -55,3 +54,6 @@ command=/run/monica/monica-zmq-server -i tcp://localhost:6677 -o tcp://localhost
 numprocs=%(ENV_monica_instances)s
 autostart=true
 autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
