option to start proxy and worker independently

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -30,30 +30,30 @@ serverurl=unix:///dev/shm/supervisor.sock ; use a unix:// URL  for a unix socket
 [include]
 files = /etc/supervisor/conf.d/*.conf
  
-[program:monica-proxy-in]
-command=/run/monica/monica-zmq-proxy -p -f 7788 -b 7777
+[program:monica-proxy-out]
+command=/run/monica/monica-zmq-proxy -p -f %(ENV_monica_intern_out_port)s -b %(ENV_monica_consumer_port)s 
 numprocs=1
-autostart=true
-autorestart=true
+autostart=%(ENV_monica_autostart_proxies)s
+autorestart=%(ENV_monica_auto_restart_proxies)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:monica-proxy-out]
-command=/run/monica/monica-zmq-proxy -p -f 6666 -b 6677 
+[program:monica-proxy-in]
+command=/run/monica/monica-zmq-proxy -p -f %(ENV_monica_producer_port)s -b %(ENV_monica_intern_in_port)s 
 numprocs=1
-autostart=true
-autorestart=true
+autostart=%(ENV_monica_autostart_proxies)s
+autorestart=%(ENV_monica_auto_restart_proxies)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:monica-worker]
 process_name = %(program_name)s_%(process_num)02d
-command=/run/monica/monica-zmq-server -i tcp://localhost:6677 -o tcp://localhost:7788 -c tcp://localhost:8899 
+command=/run/monica/monica-zmq-server -i tcp://%(ENV_monica_proxy_in_host)s:%(ENV_monica_intern_in_port)s -o tcp://%(ENV_monica_proxy_out_host)s:%(ENV_monica_intern_out_port)s -c tcp://localhost:8899 
 numprocs=%(ENV_monica_instances)s
-autostart=true
-autorestart=true
+autostart=%(ENV_monica_autostart_worker)s
+autorestart=%(ENV_monica_auto_restart_worker)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
